[JSC] wasm funcref type name should be exposed as "funcref" instead of "anyfunc" https://bugs.webkit.org/show_bug.cgi?id=243672

Reviewed by Justin Michaud.

Just change "anyfunc" to "funcref" to align it to the latest spec.
And update wpt wasm tests, which also needs to update IndexedDB/resources directory.

* LayoutTests/imported/w3c/resources/import-expectations.json:
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/cross-origin-helper-frame.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/file_to_save.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/idb-partitioned-basic-iframe.tentative.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/idb-partitioned-coverage-iframe.tentative.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/idb-partitioned-persistence-iframe.tentative.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/idbworker.js: Added.
(false.MessageHandler.open_rq.onupgradeneeded):
(false.MessageHandler.db.e.target.result.db.onerror):
(false.MessageHandler.db.transaction.objectStore.onsuccess):
(false.MessageHandler.open_rq.onsuccess):
(false.MessageHandler.open_rq.onerror):
(false.MessageHandler.open_rq.onblocked):
(false.MessageHandler):
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/interleaved-cursors-common.js: Added.
(objectKey):
(objectValue):
(writeCursorObjects):
(interleaveCursors):
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/nested-cloning-common.js: Added.
(createValue):
(checkValue):
(cloningTestInternal):
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/reading-autoincrement-common.js: Added.
(nameForId):
(async setupAutoincrementDatabase):
(idsSortedByStringCompare):
(async iterateCursor):
(async getAllKeysViaCursor):
(async getAllViaCursor):
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/support-promises.js: Added.
(databaseName):
(requestWatcher):
(transactionWatcher):
(promiseForRequest):
(migrateNamedDatabase):
(createNamedDatabase):
(openNamedDatabase):
(const.createBooksStore):
(const.createBooksStoreWithoutAutoIncrement):
(createNotBooksStore):
(checkStoreIndexes):
(checkStoreGenerator):
(async deleteAllDatabases):
(spin):
(keepAlive):
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/support.js: Added.
(add_completion_callback):
(fail):
(auto_fail):
(createdb_for_multiple_tests):
(assert_key_equals):
(indexeddb_test):
(is_transaction_active):
(spin):
(keep_alive):
(barrier_func):
* LayoutTests/imported/w3c/web-platform-tests/IndexedDB/resources/w3c-import.log:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/basic.tentative.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/basic.tentative.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/basic.tentative.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/basic.tentative.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/w3c-import.log:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/global/constructor.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/global/constructor.any.js:
(test):
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/global/constructor.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/global/type.tentative.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/global/type.tentative.any.js:
(string_appeared_here.test):
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/global/type.tentative.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/table/type.tentative.any.js:
(test):
* LayoutTests/imported/w3c/web-platform-tests/wasm/serialization/arraybuffer/transfer.window-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/serialization/arraybuffer/transfer.window.js:
(test):
* LayoutTests/imported/w3c/web-platform-tests/wasm/serialization/module/nested-worker-success.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/serialization/module/nested-worker-success.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/serialization/module/serialization-via-idb.any.js:
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/body.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/body.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/body.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/body.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/contenttype.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/contenttype.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/contenttype.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/contenttype.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/empty-body.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/empty-body.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/empty-body.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/empty-body.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/esm-integration/resources/w3c-import.log: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/esm-integration/w3c-import.log: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/historical.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/historical.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/historical.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/historical.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming-bad-imports.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming-bad-imports.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming-bad-imports.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming-bad-imports.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/instantiateStreaming.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-args.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-args.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-args.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-args.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-code.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-code.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-code.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/invalid-code.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/modified-contenttype.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/modified-contenttype.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/modified-contenttype.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/modified-contenttype.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/origin.sub.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/origin.sub.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/origin.sub.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/origin.sub.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/rejected-arg.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/rejected-arg.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/rejected-arg.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/rejected-arg.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/status.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/status.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/status.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/status.any.sharedworker.html: Added.
* Source/JavaScriptCore/wasm/js/JSWebAssemblyGlobal.cpp:
(JSC::JSWebAssemblyGlobal::type):
* Source/JavaScriptCore/wasm/js/JSWebAssemblyTable.cpp:
(JSC::JSWebAssemblyTable::type):
* Source/JavaScriptCore/wasm/js/WebAssemblyTagConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/253255@main