Source/JavaScriptCore/wasm/js/WebAssemblyTagConstructor.cpp
@@ -71,7 +71,7 @@ JSC_DEFINE_HOST_FUNCTION(constructJSWebAssemblyTag, (JSGlobalObject* globalObjec
             type = Wasm::Types::F32;
         else if (valueString == "f64"_s)
             type = Wasm::Types::F64;
-        else if (valueString == "anyfunc"_s)
+        else if (valueString == "funcref"_s || valueString == "anyfunc"_s)
             type = Wasm::Types::Funcref;
         else if (valueString == "externref"_s)
             type = Wasm::Types::Externref;
